--- a/app/views/index/index.html.erb
+++ b/app/views/index/index.html.erb
@@ -15,6 +15,8 @@
 
     <%= render 'index/sections/schedule' %>
 
+    <%= render 'index/sections/enrollment' %>
+
     <!-- Sections end -->
 
   </div>
