--- a/app/assets/stylesheets/_utilities.sass
+++ b/app/assets/stylesheets/_utilities.sass
@@ -16,6 +16,8 @@ $tablet-breakpoint: 768px
 
 .text-primary
   color: $primary-color
+.text-white
+  color: white
 
 .hidden-tablet
   @media (max-width: $tablet-breakpoint)
