--- a/app/assets/stylesheets/index/_nav.sass
+++ b/app/assets/stylesheets/index/_nav.sass
@@ -1,6 +1,7 @@
 .main-nav
   +flex-center
-  background: linear-gradient(rgba(38, 38, 39, .3), rgba(38, 38, 39, .3)), image-url('index/bg1.jpg') center no-repeat
+  // background: linear-gradient(rgba(38, 38, 39, .3), rgba(38, 38, 39, .3)), image-url('index/bg1.jpg') center no-repeat
+  background: rgba(53, 42, 85, 0.9)
   justify-content: space-between
   min-height: 70px
   position: sticky
