--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -1,6 +1,7 @@
 @import 'fonts'
 @import 'simple-line-icons'
 @import 'semantic-ui'
+@import 'sweetalert2/dist/sweetalert2.min'
 
 @import 'structure'
 @import 'utilities'
