--- a/app/views/index/_header.html.erb
+++ b/app/views/index/_header.html.erb
@@ -19,7 +19,7 @@
       <i class="icon-location-pin"></i> UFFS, Chapecó - SC
     </h5>
     <h1 class="intro-header">
-      VI Semana Acadêmica - <span class="text-primary">CC</span><span class="blink-me">|</span>
+      VI Semana Acadêmica - <span class="text-primary">CC</span><span class="blink-me">_</span>
     </h1>
     <h6 class="sub-header">
       A ciência que <strong>expande</strong>, <strong>conecta</strong> e <strong>revoluciona</strong>!
