--- a/app/views/index/index.html.erb
+++ b/app/views/index/index.html.erb
@@ -1,3 +1,6 @@
+<%= render 'partials/modal_signup' %>
+<%= render 'partials/modal_login' %>
+
 <%= render 'index/header' %>
 
 <main style="position: relative;">
