--- a/app/views/index/sections/_about.html.erb
+++ b/app/views/index/sections/_about.html.erb
@@ -1,6 +1,6 @@
 <section class="section about" id="sobre">
   <h1 class="ui icon center aligned header">
-    <i class="icon-info"></i>
+    <i class="icon-info text-primary"></i>
     <div class="content">
       Sobre a Semana Acadêmica
       <div class="sub header">
