--- a/app/views/index/sections/_enrollment.html.erb
+++ b/app/views/index/sections/_enrollment.html.erb
@@ -1,6 +1,6 @@
 <section class="section enrollment" id="inscricao">
   <h1 class="ui icon center aligned inverted header">
-    <i class="icon-pencil text-white"></i>
+    <i class="icon-pencil"></i>
     <div class="content">
       Inscrição
       <div class="sub header">
