--- a/app/views/index/sections/_schedule.html.erb
+++ b/app/views/index/sections/_schedule.html.erb
@@ -1,6 +1,6 @@
 <section class="section schedule" id="agenda">
   <h1 class="ui icon center aligned header">
-    <i class="icon-calendar"></i>
+    <i class="icon-calendar text-primary"></i>
     <div class="content">
       Agenda
       <div class="sub header">
