--- a/app/views/index/sections/_speakers.html.erb
+++ b/app/views/index/sections/_speakers.html.erb
@@ -1,6 +1,6 @@
 <section class="section speakers" id="convidados">
   <h1 class="ui icon center aligned header">
-    <i class="icon-microphone"></i>
+    <i class="icon-microphone text-primary"></i>
     <div class="content">
       Palestrantes
       <div class="sub header">
