--- a/app/assets/stylesheets/index.sass
+++ b/app/assets/stylesheets/index.sass
@@ -16,8 +16,6 @@
   h1.header
     font-size: 3em
     font-weight: 400
-  i[class*="icon-"]:not([class*="text-"])
-    color: $primary-color
 
 .text-center
   text-align: center
@@ -99,10 +97,13 @@
   text-align: center
   li
     font-size: 1.5em
-    // font-weight: 300
     padding: 10px 0
     margin: 0
     width: 100%
+
+.form-subtitle
+  color: #555
+  margin-bottom: 25px
 
 .bg-cover
   background-attachment: fixed
