Botão de inscrição do header abre modal

--- a/app/views/index/_header.html.erb
+++ b/app/views/index/_header.html.erb
@@ -25,7 +25,7 @@
       A ciência que <strong>expande</strong>, <strong>conecta</strong> e <strong>revoluciona</strong>!
     </h6>
     <div class="hero-buttons">
-      <a href="#inscricao" class="ui primary large button">
+      <a href="#" class="ui primary large button signup-modal">
         Realizar inscrição
       </a>
       <a href="#agenda" class="ui inverted large button">
