added os textos do site e as imagens de alguns palestrantes

--- a/app/views/index/sections/_about.html.erb
+++ b/app/views/index/sections/_about.html.erb
@@ -34,10 +34,10 @@
         <div class="nine wide column">
           <h2 class="ui header">Sobre o evento</h2>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos quae hic eius aperiam non eos enim deserunt, placeat voluptates corporis libero obcaecati laboriosam, rem quaerat natus, dolore vitae at ad quidem fugit consectetur. Sunt quisquam ullam iste dolorem tempora perspiciatis.
+            A Semana Acadêmica da Ciência da Computação da UFFS é um evento estudantil promovido pelo Centro Acadêmico do curso com o intuito de compartilhar o conhecimento entre os alunos através de palestras, oficinas e minicursos.
           </p>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque ea voluptatum ex quam natus id rem ratione, odit, ipsam ducimus quos in, perspiciatis placeat. Molestias maxime, culpa in ex sed.
+            Este ano, em sua 6° edição, o evento ocorrerá entre os dias 19 e 23 de novembro com programação nos períodos vespertino e noturno.
           </p>
         </div>
       </div>
@@ -51,10 +51,7 @@
         <div class="nine wide column">
           <h2 class="ui header">Sobre as atrações</h2>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum temporibus itaque culpa tempora asperiores. Cupiditate fugiat debitis, porro id nobis soluta vero accusantium dignissimos itaque? Corporis facere sint neque ab nisi, nam quod, recusandae architecto ducimus eaque nesciunt id eius!
-          </p>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim voluptatum mollitia et quis, harum error quisquam a, repellat officiis officia dolore natus dignissimos molestiae vero dolorum aliquid similique eligendi quaerat.
+            Entre as Atrações da Semana Acadêmica temos palestras que trazem outras visões de mundo relacionadas ao curso, campeonatos que trazer entretenimento e cines debates onde desenvolvemos a análise crítica sobre os principais temas da atualidade.
           </p>
         </div>
       </div>
@@ -68,10 +65,7 @@
         <div class="nine wide column">
           <h2 class="ui header">Sobre os workshops</h2>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus architecto hic quibusdam eos rem eveniet dignissimos, omnis magni! Accusantium architecto quasi placeat unde, fugit animi eveniet, explicabo itaque, iure velit, iusto incidunt molestiae et. Temporibus amet minus, ducimus quia consequatur!
-          </p>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum quia illo doloribus eveniet, perspiciatis iusto dolores, quisquam, blanditiis dignissimos harum reiciendis obcaecati quasi rem earum, consequatur vitae suscipit delectus a!
+            Os workshops são espaços para os participantes poderem aprender mais e na prática!
           </p>
         </div>
       </div>
