--- a/app/views/index/sections/_schedule.html.erb
+++ b/app/views/index/sections/_schedule.html.erb
@@ -4,7 +4,8 @@
     <div class="content">
       Agenda
       <div class="sub header">
-        Something in here
+        Confira toda a programação* da VI Semana Acadêmica de Ciência da Computação!
+        <p class="small">*Programação sujeita a mudanças</p>
       </div>
     </div>
   </h1>
@@ -23,20 +24,32 @@
           <ul class="nav nav-schedule">
             <li class="active">
               <a href="#schedule-day-1">
-                <h5 class="highlight">Dia 1</h5>
-                <p class="text-alt">08/10/2018</p>
+                <h5 class="highlight">O que é ser um Ciêntista da Computação</h5>
+                <p class="text-alt">Segunda-Feira 19/1/2018</p>
               </a>
             </li>
             <li class="">
               <a href="#schedule-day-2">
-                <h5 class="highlight">Dia 2</h5>
-                <p class="text-alt">09/10/2018</p>
+                <h5 class="highlight">Como a UFFS comtribui com a Cicência da Computação</h5>
+                <p class="text-alt">20/1/2018</p>
               </a>
             </li>
             <li class="">
               <a href="#schedule-day-3">
-                <h5 class="highlight">Dia 3</h5>
-                <p class="text-alt">10/10/2018</p>
+                <h5 class="highlight">Dia da Computação Multidisciplinar</h5>
+                <p class="text-alt">21/1/2018</p>
+              </a>
+            </li>
+            <li class="">
+              <a href="#schedule-day-4">
+                <h5 class="highlight">Mercado de Trabalho Profissional de T.I.</h5>
+                <p class="text-alt">22/1/2018</p>
+              </a>
+            </li>
+            <li class="">
+              <a href="#schedule-day-5">
+                <h5 class="highlight">Mulheres na área da Computação</h5>
+                <p class="text-alt">23/1/2018</p>
               </a>
             </li>
           </ul>
@@ -187,6 +200,101 @@
 
           </div>
           <!-- Day 3 content end -->
+
+          <!-- Day 4 content start -->
+          <div id="schedule-day-4" class="tab-pane">
+
+            <!-- Second level content start -->
+            <div class="tab-content tab-content-schedule">
+
+              <!-- Main content start -->
+              <div class="tab-pane">
+
+                <!-- Accordion start -->
+                <div class="panel-group">
+
+                  <% 5.times do %>
+                    <div class="panel schedule-item">
+                      <div class="lecture-icon-wrapper">
+                        <!-- <i class="fab fa-bitcoin text-dark"></i> -->
+                        <%= image_tag 'speakers/speaker3.jpg', class: 'img-responsive', width: '100%' %>
+                      </div>
+                      <div>
+                        <strong class="time highlight">
+                          <i class="icon-clock text-dark"></i> 2:20 PM</strong>
+                        <h4>
+                          How to organize great events day 3
+                        </h4>
+                      </div>
+                      <div class="schedule-item-body">
+                        <article>
+                          <p class="description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type.</p>
+                          <strong class="highlight speaker-name">Michael Lambert</strong>
+                        </article>
+                        <div class="ui divider"></div>
+                      </div>
+                    </div>
+                  <% end %>
+
+                </div>
+                <!-- Accordion end -->
+
+              </div>
+              <!-- Main content end -->
+
+            </div>
+            <!-- Second level content end -->
+
+          </div>
+          <!-- Day 4 content end -->
+
+          <!-- Day 5 content start -->
+          <div id="schedule-day-5" class="tab-pane">
+
+            <!-- Second level content start -->
+            <div class="tab-content tab-content-schedule">
+
+              <!-- Main content start -->
+              <div class="tab-pane">
+
+                <!-- Accordion start -->
+                <div class="panel-group">
+
+                  <% 5.times do %>
+                    <div class="panel schedule-item">
+                      <div class="lecture-icon-wrapper">
+                        <!-- <i class="fab fa-bitcoin text-dark"></i> -->
+                        <%= image_tag 'speakers/speaker3.jpg', class: 'img-responsive', width: '100%' %>
+                      </div>
+                      <div>
+                        <strong class="time highlight">
+                          <i class="icon-clock text-dark"></i> 2:20 PM</strong>
+                        <h4>
+                          How to organize great events day 3
+                        </h4>
+                      </div>
+                      <div class="schedule-item-body">
+                        <article>
+                          <p class="description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type.</p>
+                          <strong class="highlight speaker-name">Michael Lambert</strong>
+                        </article>
+                        <div class="ui divider"></div>
+                      </div>
+                    </div>
+                  <% end %>
+
+                </div>
+                <!-- Accordion end -->
+
+              </div>
+              <!-- Main content end -->
+
+            </div>
+            <!-- Second level content end -->
+
+          </div>
+          <!-- Day 5 content end -->
+
 
         </div>
         <!-- First level content end -->
