Remove image_tag sem imagem

--- a/app/views/index/sections/_speakers.html.erb
+++ b/app/views/index/sections/_speakers.html.erb
@@ -17,7 +17,7 @@
     <div class="ui stackable three column centered grid">
 
     <div class="column">
-      <%= image_tag "speakers/braulio.jpg", class: 'ui circular centered image' %>
+      <%#= image_tag "speakers/braulio.jpg", class: 'ui circular centered image' %>
       <h4 class="ui centered speaker header">
         <div class="content">
           <span class="speaker-name">Profº Braulio</span>
