Typos e ajuste de tamanho das imagens

--- a/app/views/index/sections/_schedule.html.erb
+++ b/app/views/index/sections/_schedule.html.erb
@@ -4,8 +4,8 @@
     <div class="content">
       Agenda
       <div class="sub header">
-        Confira toda a programação* da VI Semana Acadêmica de Ciência da Computação!
-        <p class="small">*Programação sujeita a mudanças</p>
+        Confira toda a programação da VI Semana Acadêmica de Ciência da Computação!
+        <br><small>Programação sujeita a mudanças</small>
       </div>
     </div>
   </h1>
@@ -24,13 +24,13 @@
           <ul class="nav nav-schedule">
             <li class="active">
               <a href="#schedule-day-1">
-                <h5 class="highlight">O que é ser um Ciêntista da Computação</h5>
-                <p class="text-alt">Segunda-Feira 19/1/2018</p>
+                <h5 class="highlight">O que é ser um Cientista da Computação</h5>
+                <p class="text-alt">19/1/2018</p>
               </a>
             </li>
             <li class="">
               <a href="#schedule-day-2">
-                <h5 class="highlight">Como a UFFS comtribui com a Cicência da Computação</h5>
+                <h5 class="highlight">UFFS e a Ciência da Computação</h5>
                 <p class="text-alt">20/1/2018</p>
               </a>
             </li>
