--- a/app/views/index/sections/_speakers.html.erb
+++ b/app/views/index/sections/_speakers.html.erb
@@ -16,201 +16,159 @@
   <div class="container">
     <div class="ui stackable three column centered grid">
 
-    <div class="column">
-      <%#= image_tag "speakers/braulio.jpg", class: 'ui circular centered image' %>
-      <h4 class="ui centered speaker header">
-        <div class="content">
-          <span class="speaker-name">Profº Braulio</span>
-          <div class="sub header">
-
-
+      <div class="column">
+        <%= image_tag "speakers/fronteiratec.jpg", class: 'ui circular medium centered image' %>
+        <h4 class="ui centered speaker header">
+          <div class="content">
+            <span class="speaker-name">Fronteiratec</span>
+            <div class="sub header"></div>
           </div>
-        </div>
-      </h4>
-    </div>
+        </h4>
+      </div>
 
-    <div class="column">
-      <%= image_tag "speakers/fronteiratec.jpg", class: 'ui circular centered image' %>
-      <h4 class="ui centered speaker header">
-        <div class="content">
-          <span class="speaker-name">Fronteiratec</span>
-          <div class="sub header">
-
-
+      <div class="column">
+        <%= image_tag "speakers/denioduarte.jpg", class: 'ui circular medium centered image' %>
+        <h4 class="ui centered speaker header">
+          <div class="content">
+            <span class="speaker-name">Profº Denio Duarte</span>
+            <div class="sub header"></div>
           </div>
-        </div>
-      </h4>
-    </div>
+        </h4>
+      </div>
 
-    <div class="column">
-      <%= image_tag "speakers/denioduarte.jpg", class: 'ui circular centered image' %>
-      <h4 class="ui centered speaker header">
-        <div class="content">
-          <span class="speaker-name">Profº Denio Duarte</span>
-          <div class="sub header">
-
-
+      <div class="column">
+        <%= image_tag "speakers/tomkelski.jpg", class: 'ui circular medium centered image' %>
+        <h4 class="ui centered speaker header">
+          <div class="content">
+            <span class="speaker-name">Anderson tomkelski</span>
+            <div class="sub header"></div>
           </div>
-        </div>
-      </h4>
-    </div>
+        </h4>
+      </div>
 
-    <div class="column">
-      <%= image_tag "speakers/tomkelski.jpg", class: 'ui circular centered image' %>
-      <h4 class="ui centered speaker header">
-        <div class="content">
-          <span class="speaker-name">Anderson tomkelski</span>
-          <div class="sub header">
-
-
+      <div class="column">
+        <%= image_tag "speakers/emilio.jpg", class: 'ui circular medium centered image' %>
+        <h4 class="ui centered speaker header">
+          <div class="content">
+            <span class="speaker-name">Profº Emílio Wuerges</span>
+            <div class="sub header"></div>
           </div>
-        </div>
-      </h4>
-    </div>
+        </h4>
+      </div>
 
-    <div class="column">
-      <%= image_tag "speakers/emilio.jpg", class: 'ui circular centered image' %>
-      <h4 class="ui centered speaker header">
-        <div class="content">
-          <span class="speaker-name">Profº Emílio Wuerges</span>
-          <div class="sub header">
-
-
+      <div class="column">
+        <%= image_tag "speakers/raquel.jpg", class: 'ui circular medium centered image' %>
+        <h4 class="ui centered speaker header">
+          <div class="content">
+            <span class="speaker-name">Profª Raquel Pegoraro </span>
+            <div class="sub header"></div>
           </div>
-        </div>
-      </h4>
-    </div>
+        </h4>
+      </div>
 
-    <div class="column">
-      <%= image_tag "speakers/raquel.jpg", class: 'ui circular centered image' %>
-      <h4 class="ui centered speaker header">
-        <div class="content">
-          <span class="speaker-name">Profª Raquel Pegoraro </span>
-          <div class="sub header">
-
-
+      <div class="column">
+        <%= image_tag "speakers/guilherme.jpg", class: 'ui circular medium centered image' %>
+        <h4 class="ui centered speaker header">
+          <div class="content">
+            <span class="speaker-name">Prof Guilherme Dal Bianco</span>
+            <div class="sub header"></div>
           </div>
-        </div>
-      </h4>
-    </div>
+        </h4>
+      </div>
 
-    <div class="column">
-      <%= image_tag "speakers/guilherme.jpg", class: 'ui circular centered image' %>
-      <h4 class="ui centered speaker header">
-        <div class="content">
-          <span class="speaker-name">Prof Guilherme Dal Bianco</span>
-          <div class="sub header">
-
-
+      <div class="column">
+        <%= image_tag "speakers/becker.jpg", class: 'ui circular medium centered image' %>
+        <h4 class="ui centered speaker header">
+          <div class="content">
+            <span class="speaker-name">João C. Becker</span>
+            <div class="sub header"></div>
           </div>
-        </div>
-      </h4>
-    </div>
+        </h4>
+      </div>
 
-    <div class="column">
-      <%= image_tag "speakers/becker.jpg", class: 'ui circular centered image' %>
-      <h4 class="ui centered speaker header">
-        <div class="content">
-          <span class="speaker-name">João C. Becker</span>
-          <div class="sub header">
-
-
+      <div class="column">
+        <%= image_tag "speakers/raphael.jpg", class: 'ui circular medium centered image' %>
+        <h4 class="ui centered speaker header">
+          <div class="content">
+            <span class="speaker-name">Raphael Borges</span>
+            <div class="sub header"></div>
           </div>
-        </div>
-      </h4>
-    </div>
+        </h4>
+      </div>
 
-    <div class="column">
-      <%= image_tag "speakers/raphael.jpg", class: 'ui circular centered image' %>
-      <h4 class="ui centered speaker header">
-        <div class="content">
-          <span class="speaker-name">Raphael Borges</span>
-          <div class="sub header">
-
-
+      <div class="column">
+        <%= image_tag "speakers/grazi.jpg", class: 'ui circular medium centered image' %>
+        <h4 class="ui centered speaker header">
+          <div class="content">
+            <span class="speaker-name">Prfoª Graziela Tonin</span>
+            <div class="sub header"></div>
           </div>
-        </div>
-      </h4>
-    </div>
+        </h4>
+      </div>
 
-    <div class="column">
-      <%= image_tag "speakers/grazi.jpg", class: 'ui circular centered image' %>
-      <h4 class="ui centered speaker header">
-        <div class="content">
-          <span class="speaker-name">Prfoª Graziela Tonin</span>
-          <div class="sub header">
-
-
+      <div class="column">
+        <%= image_tag "speakers/jaenisch.jpg", class: 'ui circular medium centered image' %>
+        <h4 class="ui centered speaker header">
+          <div class="content">
+            <span class="speaker-name">Lucas Jaenisch</span>
+            <div class="sub header"></div>
           </div>
-        </div>
-      </h4>
-    </div>
+        </h4>
+      </div>
 
-    <div class="column">
-      <%= image_tag "speakers/jaenisch.jpg", class: 'ui circular centered image' %>
-      <h4 class="ui centered speaker header">
-        <div class="content">
-          <span class="speaker-name">Lucas Jaenisch</span>
-          <div class="sub header">
-
-
+      <div class="column">
+        <%= image_tag "speakers/galli.jpg", class: 'ui circular medium centered image' %>
+        <h4 class="ui centered speaker header">
+          <div class="content">
+            <span class="speaker-name">Gabriel Galli</span>
+            <div class="sub header"></div>
           </div>
-        </div>
-      </h4>
-    </div>
+        </h4>
+      </div>
 
-    <div class="column">
-      <%= image_tag "speakers/galli.jpg", class: 'ui circular centered image' %>
-      <h4 class="ui centered speaker header">
-        <div class="content">
-          <span class="speaker-name">Gabriel Galli</span>
-          <div class="sub header">
-
-
+      <div class="column">
+        <%= image_tag "speakers/gabrielAlura.jpg", class: 'ui circular medium centered image' %>
+        <h4 class="ui centered speaker header">
+          <div class="content">
+            <span class="speaker-name">Gabriel Ferreira</span>
+            <div class="sub header">
+                Desenvolvedor e  Instrutor da Alura Cursos Online
+            </div>
           </div>
-        </div>
-      </h4>
-    </div>
+        </h4>
+      </div>
 
-    <div class="column">
-      <%= image_tag "speakers/gabrielAlura.jpg", class: 'ui circular centered image' %>
-      <h4 class="ui centered speaker header">
-        <div class="content">
-          <span class="speaker-name">Gabriel Ferreira</span>
-          <div class="sub header">
-              Desenvolvedor e  Instrutor da Alura Cursos Online
+      <div class="column">
+        <%= image_tag "speakers/luan.jpg", class: 'ui circular medium centered image' %>
+        <h4 class="ui centered speaker header">
+          <div class="content">
+            <span class="speaker-name">Luan Félix Pimentel</span>
+            <div class="sub header"></div>
           </div>
-        </div>
-      </h4>
-    </div>
+        </h4>
+      </div>
 
-    <div class="column">
-      <%= image_tag "speakers/luan.jpg", class: 'ui circular centered image' %>
-      <h4 class="ui centered speaker header">
-        <div class="content">
-          <span class="speaker-name">Luan Félix Pimentel</span>
-          <div class="sub header">
-
-
+       <div class="column">
+        <%= image_tag "speakers/amanda.jpg", class: 'ui circular medium centered image' %>
+        <h4 class="ui centered speaker header">
+          <div class="content">
+            <span class="speaker-name">Amanda Groth</span>
+            <div class="sub header"></div>
           </div>
-        </div>
-      </h4>
-    </div>
+        </h4>
+      </div>
 
-     <div class="column">
-      <%= image_tag "speakers/amanda.jpg", class: 'ui circular centered image' %>
-      <h4 class="ui centered speaker header">
-        <div class="content">
-          <span class="speaker-name">Amanda Groth</span>
-          <div class="sub header">
-
-
+      <div class="column">
+        <%#= image_tag "speakers/braulio.jpg", class: 'ui circular medium centered image' %>
+        <h4 class="ui centered speaker header">
+          <div class="content">
+            <span class="speaker-name">Profº Braulio</span>
+            <div class="sub header"></div>
           </div>
-        </div>
-      </h4>
-    </div>
+        </h4>
+      </div>
 
-  </div>
+    </div>
   </div>
 
 </section>
